data/derived/comb/progs/unify/prog5441.ml.out
Characters 92-93:
  | true -> wwhile f b';;
                   ^
Error: This expression has type 'a -> ('b -> 'c) * bool
       but an expression was expected of type ('a -> ('b -> 'c) * bool) * 'a
